[workspace]
members = ["echo", "echo-common", "echo-ebpf", "xtask"]
default-members = ["echo", "echo-common", "xtask"]

[profile.dev]
panic = "abort"
lto = true

[profile.release]
panic = "abort"
lto = true

[profile.dev.package.echo-ebpf]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 1

[profile.release.package.echo-ebpf]
codegen-units = 1
